--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../../public/assets/fonts/Roboto-Bold.ttf') format('truetype');
+    /* Diğer font formatları için gerekli eklemeleri yapın (woff, woff2, etc.) */
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@font-face {
+    font-family: 'Roboto-Regular';
+    src: url('../../public/assets/fonts/Roboto-Regular.ttf') format('truetype');
+    /* Diğer font formatları için gerekli eklemeleri yapın (woff, woff2, etc.) */
   }
-}
